# ai_search

./: .coveragerc  .env  .env.example  .env.template  .gitignore  API_FIX_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_EXECUTIVE_SUMMARY.md  BUGFIX_FASTAPI_DEPENDENCY.md  BUG_FIXES.md  CLAUDE.md  CODEBASE_INVENTORY.md  COMPLETE_FEATURE_INVENTORY.md  COVERAGE_SETUP.md  DEAD_CODE_CLEANUP.md  DOMAIN_TOOLS_FIX.md  FEATURE_INTEGRATION_STATUS.md  FILE_UPLOAD_SECURITY_AUDIT.md  FINAL_TEST_REPORT.md  FIXES_2025-11-02.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_COMPLETION_REPORT.md  INTEGRATION_PRIORITY_MATRIX.md  JSON_LOGGING_GUIDE.md  LLM_ROUTING_IMPLEMENTATION_GUIDE.md  LLM_ROUTING_STATUS_REPORT.md  LOAD_TESTING_GUIDE.md  MARKDOWN_AND_ADVANCED_FEATURES.md  Midterm_Report.md  PHASE1_PROGRESS.md  PHASE_1-3_COMPLETION.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_4-5_COMPLETION.md  PHASE_7_FINAL_REPORT.md  PHASE_7_TESTING_COMPLETE.md  PHASE_8.3_ARCHITECTURE_DIAGRAMS_COMPLETE.md  PHASE_8.4_DEPLOYMENT_GUIDE_COMPLETE.md  PHASE_8.5_README_BADGES_COMPLETE.md  RAG_QUICK_START.md  RATE_LIMITING.md  (+20 more)
config/: config.yaml
data/: history.db  history.db-shm  history.db-wal
docs/: 00-INDEX.md  01-QUICKSTART.md  02-INSTALLATION.md  10-ARCHITECTURE.md  11-INTELLIGENT-ROUTING.md  12-AGENT-SYSTEM.md  13-DATA-FLOW.md  20-FEATURE-RESEARCH.md  21-FEATURE-CODE.md  22-FEATURE-CHAT.md  23-FEATURE-RAG.md  24-FEATURE-RERANKING.md  25-FEATURE-WEATHER.md  26-FEATURE-FINANCE.md  27-FEATURE-ROUTING.md  28-FEATURE-OCR.md  29-FEATURE-VISION.md  30-FEATURE-WORKFLOW.md  40-API-AGENTS.md  41-API-TOOLS.md  42-API-WEB-ENDPOINTS.md  50-WEB-UI-OVERVIEW.md  51-WEB-UI-HTMX.md  60-CONFIGURATION-LLM.md  61-CONFIGURATION-APIS.md  70-DEVELOPMENT-GUIDE.md  71-TESTING-GUIDE.md  80-TROUBLESHOOTING.md  81-FAQ.md  ALIYUN_DASHSCOPE_SETUP.md  API_ENDPOINTS_GUIDE.md  CLAUDE.md  (+24 more)
(+173 files in other folders)
